tests/js/valid/integers/type-definition.buri
one: Int = 1
MyNumber = Int
two: MyNumber = 2