tests/js/invalid/tag/mismatched-types-4.buri
items: #wrapper(Int, Int) = #wrapper(1, 2, 3)